# lte/cloud/go/services/lte/obsidian/models/swagger.v1.yml
@@ -68,18 +68,6 @@ magma-gen-meta:
       filename: cellular_gateway_pool_record_swaggergen.go
     - go-struct-name: CellularGatewayPoolRecords
       filename: cellular_gateway_pool_records_swaggergen.go
-    - go-struct-name: NetworkProbeTaskID
-      filename: network_probe_task_id_swaggergen.go
-    - go-struct-name: NetworkProbeTaskDetails
-      filename: network_probe_task_details_swaggergen.go
-    - go-struct-name: NetworkProbeTask
-      filename: network_probe_task_swaggergen.go
-    - go-struct-name: NetworkProbeDestinationID
-      filename: network_probe_destination_id_swaggergen.go
-    - go-struct-name: NetworkProbeDestinationDetails
-      filename: network_probe_destination_details_swaggergen.go
-    - go-struct-name: NetworkProbeDestination
-      filename: network_probe_destination_swaggergen.go
 
 info:
   title: LTE Network Management
@@ -1551,159 +1539,6 @@ paths:
         default:
           $ref: './orc8r-swagger-common.yml#/responses/UnexpectedError'
 
-  /lte/{network_id}/network_probe_tasks:
-    get:
-      summary: List NetworkProbeTask in the network
-      tags:
-        - Network Probes
-      parameters:
-        - $ref: './orc8r-swagger-common.yml#/parameters/network_id'
-      responses:
-        '200':
-          description: Provisioned NetworkProbeTasks
-          schema:
-            $ref: '#/definitions/network_probe_task'
-        default:
-          $ref: './orc8r-swagger-common.yml#/responses/UnexpectedError'
-    post:
-      summary: Add a new NetworkProbeTask to the network
-      tags:
-        - Network Probes
-      parameters:
-        - $ref: './orc8r-swagger-common.yml#/parameters/network_id'
-        - name: network_probe_task
-          in: body
-          required: true
-          schema:
-            $ref: '#/definitions/network_probe_task'
-      responses:
-        '201':
-          description: Success
-        default:
-          $ref: './orc8r-swagger-common.yml#/responses/UnexpectedError'
-
-  /lte/{network_id}/network_probe_tasks/{task_id}:
-    get:
-      summary: Retrieve the NetworkProbeTask info
-      tags:
-        - Network Probes
-      parameters:
-        - $ref: './orc8r-swagger-common.yml#/parameters/network_id'
-        - $ref: '#/parameters/task_id'
-      responses:
-        '200':
-          description: NetworkProbeTask Info
-          schema:
-            $ref: '#/definitions/network_probe_task'
-        default:
-          $ref: './orc8r-swagger-common.yml#/responses/UnexpectedError'
-    put:
-      summary: Update an existing NetworkProbeTask in the network
-      tags:
-        - Network Probes
-      parameters:
-        - $ref: './orc8r-swagger-common.yml#/parameters/network_id'
-        - $ref: '#/parameters/task_id'
-        - in: body
-          name: network_probe_task
-          description: New NetworkProbeTask configuration
-          required: true
-          schema:
-            $ref: '#/definitions/network_probe_task'
-      responses:
-        '204':
-          description: Success
-        default:
-          $ref: './orc8r-swagger-common.yml#/responses/UnexpectedError'
-    delete:
-      summary: Remove an NetworkProbeTask from the network
-      tags:
-        - Network Probes
-      parameters:
-        - $ref: './orc8r-swagger-common.yml#/parameters/network_id'
-        - $ref: '#/parameters/task_id'
-      responses:
-        '204':
-          description: Success
-        default:
-          $ref: './orc8r-swagger-common.yml#/responses/UnexpectedError'
-
-  /lte/{network_id}/network_probe_destinations:
-    get:
-      summary: List NetworkProbe Destinations in the network
-      tags:
-        - Network Probes
-      parameters:
-        - $ref: './orc8r-swagger-common.yml#/parameters/network_id'
-      responses:
-        '200':
-          description: Provisioned NetworkProbe Destinations
-          schema:
-            $ref: '#/definitions/network_probe_destination'
-        default:
-          $ref: './orc8r-swagger-common.yml#/responses/UnexpectedError'
-    post:
-      summary: Add a new NetworkProbeDestination to the network
-      tags:
-        - Network Probes
-      parameters:
-        - $ref: './orc8r-swagger-common.yml#/parameters/network_id'
-        - name: network_probe_destination
-          in: body
-          required: true
-          schema:
-            $ref: '#/definitions/network_probe_destination'
-      responses:
-        '201':
-          description: Success
-        default:
-          $ref: './orc8r-swagger-common.yml#/responses/UnexpectedError'
-
-  /lte/{network_id}/network_probe_destinations/{destination_id}:
-    get:
-      summary: Retrieve a NetworkProbe Destination
-      tags:
-        - Network Probes
-      parameters:
-        - $ref: './orc8r-swagger-common.yml#/parameters/network_id'
-        - $ref: '#/parameters/destination_id'
-      responses:
-        '200':
-          description: NetworkProbeDestination Info
-          schema:
-            $ref: '#/definitions/network_probe_destination'
-        default:
-          $ref: './orc8r-swagger-common.yml#/responses/UnexpectedError'
-    put:
-      summary: Update an existing NetworkProbe Destination in the network
-      tags:
-        - Network Probes
-      parameters:
-        - $ref: './orc8r-swagger-common.yml#/parameters/network_id'
-        - $ref: '#/parameters/destination_id'
-        - in: body
-          name: network_probe_destination
-          description: New NetworkProbeDestination configuration
-          required: true
-          schema:
-            $ref: '#/definitions/network_probe_destination'
-      responses:
-        '204':
-          description: Success
-        default:
-          $ref: './orc8r-swagger-common.yml#/responses/UnexpectedError'
-    delete:
-      summary: Remove a NetworkProbe Destination from the network
-      tags:
-        - Network Probes
-      parameters:
-        - $ref: './orc8r-swagger-common.yml#/parameters/network_id'
-        - $ref: '#/parameters/destination_id'
-      responses:
-        '204':
-          description: Success
-        default:
-          $ref: './orc8r-swagger-common.yml#/responses/UnexpectedError'
 
 parameters:
   enodeb_serial:
@@ -1724,20 +1559,6 @@ parameters:
     description: Gateway Pool ID
     in: path
     name: gateway_pool_id
-    required: true
-    type: string
-
-  task_id:
-    in: path
-    name: task_id
-    description: Network Probe Task ID
-    required: true
-    type: string
-
-  destination_id:
-    in: path
-    name: destination_id
-    description: Network Probe Destination ID
     required: true
     type: string
 
